@@ -13,19 +13,18 @@
 # Example:
 #   package require autoproxy
 #   autoproxy::init
-#   autoproxy::configure -basic -username ME -password SEKRET
 #   set tok [http::geturl http://wiki.tcl.tk/]
 #   http::data $tok
 #
-# There is a skeleton for supporting Digest or NTLM authorisation but
-# this is not currently supported. This will probably need redesigning to
-# support schemes that require negotiation.
-#
-# @(#)$Id: autoproxy.tcl,v 1.2 2004/07/19 09:22:16 patthoyts Exp $
+# @(#)$Id: autoproxy.tcl,v 1.3 2004/07/19 13:40:18 patthoyts Exp $
+
+package require http;                   # tcl
+package require uri;                    # tcllib
+package require base64;                 # tcllib
 
 namespace eval ::autoproxy {
-    variable rcsid {$Id: autoproxy.tcl,v 1.2 2004/07/19 09:22:16 patthoyts Exp $}
-    variable version 1.1.0
+    variable rcsid {$Id: autoproxy.tcl,v 1.3 2004/07/19 13:40:18 patthoyts Exp $}
+    variable version 1.2.0
     variable options
 
     if {! [info exists options]} {
@@ -34,8 +33,7 @@ namespace eval ::autoproxy {
             proxy_port 80
             no_proxy   {}
             basic      {} 
-            digest     {} 
-            ntlm       {}
+            authProc   {}
         }
     }
 
@@ -54,18 +52,17 @@ namespace eval ::autoproxy {
 proc ::autoproxy::cget {option} {
     variable options
     switch -glob -- $option] {
-        -ho* -
-        -proxy_h* {set options(proxy_host)}
-        -po* -
-        -proxy_p* {set options(proxy_port)}
-        -no* { set options(no_proxy) }
-        -b*  { set options(basic) }
-        -d*  { set options(digest) }
-        -nt* { set options(ntlm) }
+        -host -
+        -proxy_h* { set options(proxy_host) }
+        -port -
+        -proxy_p* { set options(proxy_port) }
+        -no*      { set options(no_proxy) }
+        -basic    { set options(basic) }
+        -authProc { set options(authProc) }
         default {
             set err [join [lsort [array names options]] ", -"]
-            return -code error "bad option \"[lindex $args 0]\":\
-                       must be one of -$options"
+            return -code error "bad option \"$option\":\
+                       must be one of -$err"
         }
     }
 }
@@ -91,21 +88,20 @@ proc ::autoproxy::configure {args} {
         return $r
     }
 
-    while {[string match "-*" [lindex $args 0]]} {
-        switch -glob -- [lindex $args 0] {
-            -ho* -
-            -proxy_h* {set options(proxy_host) [Pop args 1]}
-            -po* -
-            -proxy_p* {set options(proxy_port) [Pop args 1]}
-            -no* { set options(no_proxy) [Pop args 1] }
-            -b*  { Pop args; configure:basic $args ; break }
-            -d*  { Pop args; configure:digest $args ; break }
-            -nt* { Pop args; configure:ntlm $args ; break }
-            --   { Pop args; break }
+    while {[string match "-*" [set option [lindex $args 0]]]} {
+        switch -glob -- $option {
+            -host - 
+            -proxy_h* { set options(proxy_host) [Pop args 1]}
+            -port - 
+            -proxy_p* { set options(proxy_port) [Pop args 1]}
+            -no*      { set options(no_proxy) [Pop args 1] }
+            -basic    { Pop args; configure:basic $args ; break }
+            -authProc { set options(authProc) [Pop args] }
+            --        { Pop args; break }
             default {
-                set err [join [lsort [array names options]] ", -"]
-                return -code error "bad option \"[lindex $args 0]\":\
-                       must be one of -$options"
+                set opts [join [lsort [array names options]] ", -"]
+                return -code error "bad option \"$option\":\
+                       must be one of -$opts"
             }
         }
         Pop args
@@ -124,7 +120,6 @@ proc ::autoproxy::configure {args} {
 #  authorisation key on receiving an authorisation reqest.
 #
 proc ::autoproxy::init {} {
-    package require uri
     global tcl_platform
     global env
     variable winregkey
@@ -169,7 +164,7 @@ proc ::autoproxy::init {} {
             }
         }
     }
-
+    
     # If we found something ...
     if {$httpproxy != {}} {
         # The http_proxy is supposed to be a URL - lets make sure.
@@ -188,14 +183,21 @@ proc ::autoproxy::init {} {
             -proxy_port $proxy(port) \
             -no_proxy $no_proxy
 
+        # Lift the authentication details from the environment if present.
+        if {[string length $proxy(user)] < 1 \
+                && [info exists env(http_proxy_user)] \
+                && [info exists env(http_proxy_pass)]} {
+            set proxy(user) $env(http_proxy_user)
+            set proxy(pwd)  $env(http_proxy_pass)
+        }
+
         # Maybe the proxy url has authentication parameters?
         # At this time, only Basic is supported.
         if {[string length $proxy(user)] > 0} {
             configure -basic -username $proxy(user) -password $proxy(pwd)
         }
 
-        # setup and configure the http package
-        package require http
+        # setup and configure the http package to use our proxy info.
         http::config -proxyfilter [namespace origin filter]
     }
     return $httpproxy
@@ -212,9 +214,26 @@ proc ::autoproxy::Pop {varname {nth 0}} {
 }
 
 # -------------------------------------------------------------------------
+# Description
+#   An example user authentication procedure.
+# Returns:
+#   A two element list consisting of the users authentication id and 
+#   password. 
+proc ::autoproxy::defAuthProc {{user {}} {passwd {}} {realm {}}} {
+    package require BWidget
+    if {[string length $realm] > 0} {
+        set title "Realm: $realm"
+    } else {
+        set title {}
+    }
+    return [PasswdDlg .defAuthDlg -parent {} -transient 0 -title $title \
+                -logintext $user -passwdtext $passwd]
+}
+
+# -------------------------------------------------------------------------
 
 # Description:
-#  Implement support for the Basic authentication scheme (RFC 2617).
+#  Implement support for the Basic authentication scheme (RFC 1945,2617).
 # Options:
 #  -user userid  - pass in the user ID (May require Windows NT domain
 #                  as DOMAIN\\username)
@@ -236,73 +255,19 @@ proc ::autoproxy::configure:basic {arglist} {
         }
     }
 
-    # Not going to do this now.
-    # If nothing was provided, assume they want an interactive prompt.
-    #if {$opts(user) == {} || $opts(passwd) == {}} {
-    #    package require BWidget
-    #    set r [PasswdDlg .d -logintext $opts(user) -passwdtext $opts(passwd)]
-    #    set opts(user) [lindex $r 0]
-    #    set opts(passwd) [lindex $r 1]
-    #}
-
-    # Store the encoded string to avoid re-encoding all the time.
-    package require base64
-    set options(basic) [list "Proxy-Authorization" \
-                            [concat "Basic" \
-                                 [base64::encode $opts(user):$opts(passwd)]]]
-    return
-}
-
-# -------------------------------------------------------------------------
-
-# Description:
-#  Implement support for the Digest authentication scheme (RFC nnnn).
-# Options:
-#  -user userid  - pass in the user ID (May require Windows NT domain
-#                  as DOMAIN\\username)
-#  -password pwd - pass in the user's password.
-#  -realm domain - the authorization realm
-#
-proc ::autoproxy::configure:digest {arglist} {
-    variable options
-    array set opts {user {} passwd {} realm {}}
-    foreach {opt value} $arglist {
-        switch -glob -- $opt {
-            -u* { set opts(user)   $value }
-            -p* { set opts(passwd) $value }
-            -r* { set opts(realm)  $value }
-            default {
-                return -code error "invalid option \"$opt\": must be one of\
-                     -username, -realm or -password"
-            }
-        }
-    }
-
-    # If nothing was provided, assume they want an interactive prompt.
-    if {$opts(user) == {} || $opts(passwd) == {}} {
-        package require BWidget
-        set r [PasswdDlg .d -title "Realm $opts(realm)" \
-                   -logintext $opts(user) \
-                   -passwdtext $opts(passwd)]
+    # If nothing was provided, try calling the authProc
+    if {$options(authProc) != {} \
+            && ($opts(user) == {} || $opts(passwd) == {})} {
+        set r [$options(authProc) $opts(user) $opts(passwd) $opts(realm)]
         set opts(user) [lindex $r 0]
         set opts(passwd) [lindex $r 1]
     }
 
-    # Note: we only store the MD5 checksum of the password.
-    package require md5
-    set A1 [md5::md5 "$opts(user):$opts(realm):$opts(passwd)"]
-    set options(digest) [list $opts(user) $opts(realm) $A1]
+    # Store the encoded string to avoid re-encoding all the time.
+    set options(basic) [list "Proxy-Authorization" \
+                            [concat "Basic" \
+                                 [base64::encode $opts(user):$opts(passwd)]]]
     return
-}
-
-# -------------------------------------------------------------------------
-# Description:
-#  Suport Microsoft's NTLM scheme
-#  Not done as yet.
-#
-proc ::autoproxy::configure:ntlm {arglist} {
-    variable options
-    return -code error "NTLM authorization is not available"
 }
 
 # -------------------------------------------------------------------------
@@ -329,14 +294,12 @@ proc ::autoproxy::filter {host} {
     }
     
     # Add authorisation header to the request (by Anders Ramdahl)
-    upvar state State
-    if {$options(basic) != {}} {
-        set State(-headers) [concat $options(basic) $State(-headers)]
-    } elseif {$options(digest) != {}} {
-        # FIX ME there is more to Digest than this
-        #set State(-headers) [linsert $State(-headers) 0 $options(digest)]
+    catch {
+        upvar state State
+        if {$options(basic) != {}} {
+            set State(-headers) [concat $options(basic) $State(-headers)]
+        }
     }
-    
     return [list $options(proxy_host) $options(proxy_port)]
 }
 
